bitfield/tests/09-variant-out-of-range.stderr
error[E0080]: evaluation of constant value failed
 --> tests/09-variant-out-of-range.rs:8:10
  |
8 | #[derive(BitfieldSpecifier)]
  |          ^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'enum discriminant `DeliveryMode::External` too large to fit int 3 bits', $DIR/tests/09-variant-out-of-range.rs:8:10
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `::std::panic` (in Nightly builds, run with -Z macro-backtrace for more info)
